Fix styling for kanban board on mobile.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -102,7 +102,9 @@ p a:hover {
     font-size: 24px;
 }
 
-.kanban-board .col.s3 {
+.kanban-board .todo,
+.kanban-board .inprogress,
+.kanban-board .completed {
     text-align: center;
 }
 
@@ -196,6 +198,12 @@ textarea.materialize-textarea:focus {
     color: #fff;
 }
 
+/* @media only screen and (max-width: 767px) {
+    .kanban-board h6 {
+        height: 60px;
+        padding-top: 10px;
+    }
+} */
 .kanban-board .cards .card {
     height: auto;
     border-radius: 5px;
